--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "node --test test/*.test.js",
+    "test:auto": "jest tests/auto.spec.js tests/auto.ui.spec.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier -w .",
@@ -14,6 +15,8 @@
     "eslint": "8.57.1",
     "eslint-plugin-promise": "6.6.0",
     "jsdom": "^24.0.0",
+    "jest": "^29.7.0",
+    "@jest/globals": "^29.7.0",
     "nyc": "^15.1.0",
     "prettier": "3.6.2"
   },
