--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "node --test --import=./test/setup-globals.js test/*.test.js",
-    "test:auto": "jest tests/auto.spec.js tests/auto.ui.spec.js",
+    "test:auto": "jest tests/*.spec.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier -w .",
