chore(test): unify on Jest, consolidate tests under tests/, update CI and docs
Migrate all unit/integration tests to Jest and consolidate under tests/
Convert node:test + assert to @jest/globals + expect
Add jest.config.cjs (setupFiles: tests/setup-globals.js; testMatch for .spec/.test)
Update npm scripts:
test → jest --runInBand
test:coverage → jest --coverage --runInBand
Update CI workflow to run Jest with coverage and upload coverage/lcov.info
Restore and convert integration tests to Jest:
tests/auto-ace-button.integration.test.js
tests/auto-button.integration.test.js
tests/emitter.test.js
Remove nyc configuration (.nycrc.json)
Update README (CI + new Testing section), CHANGELOG (note migration), BACKLOG (close test tasks), and CONTRIBUTING (Jest details)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,8 @@ jobs:
           cache: npm
       - name: Install
         run: npm install --no-audit --no-fund # install dependencies without touching lockfile
-      - name: Test with coverage
-        run: npm run test:coverage # run tests and collect coverage
+      - name: Test with coverage (Jest)
+        run: npm run test:coverage -- --ci
       - uses: actions/upload-artifact@v4
         with:
           name: coverage
