--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "node --test --import=./test/setup-globals.js test/*.test.js",
-    "test:auto": "jest tests/*.spec.js",
+    "test": "jest --runInBand",
+    "test:auto": "jest",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier -w .",
-    "test:coverage": "nyc npm test"
+    "test:coverage": "jest --coverage --runInBand"
   },
   "devDependencies": {
     "eslint": "8.57.1",
@@ -17,8 +17,8 @@
     "jsdom": "^24.0.0",
     "jest": "^29.7.0",
     "@jest/globals": "^29.7.0",
-    "nyc": "^15.1.0",
     "prettier": "3.6.2"
   },
   "packageManager": "npm@11.4.2"
 }
+
