--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,6 @@ jobs:
         run: npm ci
 
       - name: Test with coverage
-        run: npm run test:coverage -- --ci
+        run: npm run test:coverage
         env:
           CI: true
