--- a/package.json
+++ b/package.json
@@ -2,22 +2,21 @@
   "name": "jonv11-solitaire-onepager",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "test": "jest",
-    "test:auto": "jest",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier -w .",
-    "test:coverage": "jest --coverage --runInBand"
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --runInBand --ci"
   },
   "devDependencies": {
     "eslint": "8.57.1",
     "eslint-plugin-promise": "6.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@jest/globals": "^29.7.0",
+    "jsdom": "^24.0.0",
     "prettier": "3.6.2"
   },
-  "packageManager": "npm@11.4.2"
+  "packageManager": "npm@10.8.2"
 }
-
