--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,10 @@ jobs:
       - name: Install
         run: npm ci
 
-      - name: Test with coverage
-        run: npm run test:coverage
+      - name: Lint
+        run: npm run lint
+
+      - name: Test
+        run: npm test
         env:
           CI: true
